# pypkggen

./: LICENSE  README.md  setup.cfg
src/pypkggen/: files.py  pypkggen.py  setup_file.py
tests/: __init__.py  licenses.py
