[metadata]
name = pypkggen
version = 0.0.1
author = Samuel Ogunleke
author_email = samuelayomidehssp@gmail.com
description = A Python library for creating packages in a fast and easy way.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Samuel-HSSP/pypkggen
project_urls =
    Bug Tracker = https://github.com/Samuel-HSSP/pypkggen/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    build; python_version >= "0.7.0"
    twine; python_version >= "3.8.0"

[options.packages.find]
where = src
